--- a/MD/202409-1.md
+++ b/MD/202409-1.md
@@ -16,3 +16,8 @@
 > 2. 成功的交易就像逆流而上，或者像向山峰奔跑，与人性相悖。可以很公平地说，一致性的盈利操作要求你学会克服强烈的情绪影响。事实上，大多数专业交易者都会提到，他们许多最成功的交易靠的是与情绪冲动方向相反的操作。
 
 我发现我都占了，一定要冷静，交易的时候需要充分必要的理由，不然账户不会增长的。
+
+9 月 4 号夜盘：
+1. 平掉玉米和螺纹钢是自己心慌了，理性也没有了。
+2. 开玻璃我是觉得这个位置靠近历史底部，乘它反弹乘机开空，房地产数据也比较差，需求端不知道玻璃的上涨。即使是历史的底部，但这也不意味着到底部就会上涨反弹，难道不会需创新低？房地产的萧条对玻璃的利空很大。消息上，我看到了光伏玻璃减产，供给端减少，但相对于需求的不足，似乎杯水车薪。
+
